--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,9 @@
 version: 1.0.{build}
 image: Visual Studio 2017
+
+install:
+ - git submodule update --init --recursive
+
 build_script:
 - cmd: >-
     set cc=cl
