--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,3 +17,5 @@ build_script:
     set InstallDir=install
 
     cmake -GNinja -H.\llvm -B.\%BuidDir% -DCMAKE_INSTALL_PREFIX=%InstallDir% -DLLVM_EXTERNAL_PROJECTS="clang" -DLLVM_EXTERNAL_CLANG_SOURCE_DIR=.\clang -DCMAKE_BUILD_TYPE=release -DLLVM_TARGETS_TO_BUILD=host -DLLVM_ENABLE_WARNINGS=OFF -DLLVM_ENABLE_CXX1Z=ON -DLLVM_INCLUDE_EXAMPLES=OFF -DLLVM_INCLUDE_TESTS=OFF -DLLVM_INCLUDE_DOCS=OFF
+    
+    cmake --build .\%BuidDir% --target install
