--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,10 @@
 version: 1.0.{build}
 image: Visual Studio 2017
 
+skip_commits:
+  files:
+    - azure-pipelines.yml
+
 install:
  - git submodule update --init --recursive
 
