--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,6 +1,13 @@
-pool:
-  vmImage: 'VS2017-Win2016'
+name: llvm_clang_yml
+resources:
+- repo: self
+
+queue:
+  name: Hosted VS2017
+  demands: cmake
 
 steps:
+  - checkout: self 
+    submodules: true
   - script: build.bat
     displayName: 'cmake_script'
