--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,6 +13,9 @@ steps:
   - script: set
     displayName: env
 
+  - script: dir "C:\Program Files (x86)\Microsoft Visual Studio"
+    displayName: dir
+
   - checkout: self
     submodules: true
 
