--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ steps:
   - script: set
     displayName: env
 
-  - script: dir C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\
+  - script: dir C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\
     displayName: vcvarsall
 
   - checkout: self
