--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ steps:
   - script: set
     displayName: env
 
-  - script: dir "C:\Program Files (x86)\Microsoft Visual Studio\2017\"
+  - script: call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" x64
     displayName: vcvarsall
 
   - checkout: self
