Fix for the azure pipeline trigger exclude

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,10 +1,9 @@
 name: llvm_clang_yml
 
 trigger:
-  branches:
+  paths:
     exclude:
     - README.md
-    - appveyor.yml
 
 resources:
 - repo: self
