--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,3 +32,4 @@ steps:
       call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" x64
       CMake --build .\$(BuidDir) --target install
     displayName: CMake build-install
+    timeoutInMinutes: 180
