--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,22 +15,24 @@ variables:
   BuidDir: 'build'
   InstallDir: 'install'
 
-pool:
-  vmImage: 'VS2017-Win2016'
+jobs:
+- job: string
+  pool:
+    vmImage: 'VS2017-Win2016'
 
-cancelTimeoutInMinutes: 180
+  timeoutInMinutes: 180
 
-steps:
-  - checkout: self
-    submodules: true
+  steps:
+    - checkout: self
+      submodules: true
 
-  - script: |
-      call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" x64
-      CMake -G "Visual Studio 15 2017 Win64" -H.\llvm -B.\$(BuidDir) -Thost=x64 -DCMAKE_INSTALL_PREFIX=$(InstallDir) -DLLVM_EXTERNAL_PROJECTS="clang" -DLLVM_EXTERNAL_CLANG_SOURCE_DIR=.\clang -DCMAKE_BUILD_TYPE=release -DLLVM_TARGETS_TO_BUILD=X86 -DLLVM_ENABLE_WARNINGS=OFF -DLLVM_ENABLE_CXX1Z=ON -DLLVM_INCLUDE_EXAMPLES=OFF -DLLVM_INCLUDE_TESTS=OFF -DLLVM_INCLUDE_DOCS=OFF
-    displayName: CMake generation
+    - script: |
+        call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" x64
+        CMake -G "Visual Studio 15 2017 Win64" -H.\llvm -B.\$(BuidDir) -Thost=x64 -DCMAKE_INSTALL_PREFIX=$(InstallDir) -DLLVM_EXTERNAL_PROJECTS="clang" -DLLVM_EXTERNAL_CLANG_SOURCE_DIR=.\clang -DCMAKE_BUILD_TYPE=release -DLLVM_TARGETS_TO_BUILD=X86 -DLLVM_ENABLE_WARNINGS=OFF -DLLVM_ENABLE_CXX1Z=ON -DLLVM_INCLUDE_EXAMPLES=OFF -DLLVM_INCLUDE_TESTS=OFF -DLLVM_INCLUDE_DOCS=OFF
+      displayName: CMake generation
 
-  - script: |
-      call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" x64
-      CMake --build .\$(BuidDir) --target install
-    displayName: CMake build-install
-    timeoutInMinutes: 180
+    - script: |
+        call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" x64
+        CMake --build .\$(BuidDir) --target install
+      displayName: CMake build-install
+      timeoutInMinutes: 180
