--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,19 +23,19 @@ jobs:
   timeoutInMinutes: 180
 
   steps:
-    - script: fsutil volume diskfree c:
+    - script: | fsutil volume diskfree c:
     
     - checkout: self
       submodules: true
       
-    - script: fsutil volume diskfree c:
+    - script: | fsutil volume diskfree c:
 
     - script: |
         call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" x64
         CMake -G "Visual Studio 15 2017 Win64" -H.\llvm -B.\$(BuidDir) -Thost=x64 -DCMAKE_INSTALL_PREFIX=$(InstallDir) -DLLVM_EXTERNAL_PROJECTS="clang" -DLLVM_EXTERNAL_CLANG_SOURCE_DIR=.\clang -DCMAKE_BUILD_TYPE=release -DLLVM_TARGETS_TO_BUILD=X86 -DLLVM_ENABLE_WARNINGS=OFF -DLLVM_ENABLE_CXX1Z=ON -DLLVM_INCLUDE_EXAMPLES=OFF -DLLVM_INCLUDE_TESTS=OFF -DLLVM_INCLUDE_DOCS=OFF
       displayName: CMake generation
 
-    - script: fsutil volume diskfree c:
+    - script: | fsutil volume diskfree c:
 
     - script: |
         call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" x64
