--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,16 +23,8 @@ jobs:
   timeoutInMinutes: 240
 
   steps:
-    - script: | 
-        dir "D:/a/1/s/"
-      displayName: Free space
-
     - checkout: self
       submodules: true
-      
-    - script: | 
-        dir "D:/a/1/s/"
-      displayName: Free space
 
     - script: |
         call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" x64
@@ -41,12 +33,21 @@ jobs:
         CMake -GNinja -H.\llvm -B.\$(BuidDir) -DCMAKE_INSTALL_PREFIX=$(InstallDir) -DLLVM_EXTERNAL_PROJECTS="clang" -DLLVM_EXTERNAL_CLANG_SOURCE_DIR=.\clang -DCMAKE_BUILD_TYPE=release -DLLVM_TARGETS_TO_BUILD=X86 -DLLVM_ENABLE_WARNINGS=OFF -DLLVM_ENABLE_CXX1Z=ON -DLLVM_INCLUDE_EXAMPLES=OFF -DLLVM_INCLUDE_TESTS=OFF -DLLVM_INCLUDE_DOCS=OFF
       displayName: CMake generation
 
-    - script: | 
-        dir "D:/a/1/s/"
-      displayName: Free space
-
     - script: |
         call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" x64
         CMake --build .\$(BuidDir)
       displayName: CMake build-install
       timeoutInMinutes: 240
+  
+  steps:
+    - task: jakobehn.jakobehn-vsts-github-tasks.publish-github-release.PublishGitHubRelease@0
+      displayName: 'Publish GitHub Release llvm#####_clang######'
+      inputs:
+        applicationName: 'llvm_clang_buildDevOps'
+        token: '$(llvmClangGithubToken)'
+        repo: 'llvm_clang_build'
+        owner: monamimani
+        tagName: 'llvm#####_clang######'
+        releaseName: 'llvm#####_clang######'
+        releaseBody: 'llvm#####_clang######'
+        draft: true
