--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,9 +44,10 @@ jobs:
     - script: |
         copy readme.md $(build.stagingDirectory)
 
-    - task: jakobehn.jakobehn-vsts-github-tasks.publish-github-release.PublishGitHubRelease@0 -Verbose
+    - task: jakobehn.jakobehn-vsts-github-tasks.publish-github-release.PublishGitHubRelease@0
       displayName: 'Publish GitHub Release llvm#####_clang######'
       inputs:
+        verbose: Verbose
         applicationName: 'llvm_clang_buildDevOps'
         token: '$(llvmClangGithubToken)'
         repo: 'llvm_clang_build'
