--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,17 +43,20 @@ jobs:
 
     - script: |
         copy readme.md $(build.stagingDirectory)
+        
+    - script: |
+        PublishGitHubRelease.ps1
 
-    - task: jakobehn.jakobehn-vsts-github-tasks.publish-github-release.PublishGitHubRelease@0
-      displayName: 'Publish GitHub Release llvm#####_clang######'
-      inputs:
-        verbose: Verbose
-        applicationName: 'llvm_clang_buildDevOps'
-        token: '$(llvmClangGithubToken)'
-        repo: 'llvm_clang_build'
-        owner: monamimani
-        tagName: 'llvm#####_clang######'
-        releaseName: 'llvm#####_clang######'
-        releaseBody: 'llvm#####_clang######'
-        assetsPattern: $(build.stagingDirectory)\\**\\*.zip
-        draft: true
+    # - task: jakobehn.jakobehn-vsts-github-tasks.publish-github-release.PublishGitHubRelease@0
+    #   displayName: 'Publish GitHub Release llvm#####_clang######'
+    #   inputs:
+    #     verbose: Verbose
+    #     applicationName: 'llvm_clang_buildDevOps'
+    #     token: '$(llvmClangGithubToken)'
+    #     repo: 'llvm_clang_build'
+    #     owner: monamimani
+    #     tagName: 'llvm#####_clang######'
+    #     releaseName: 'llvm#####_clang######'
+    #     releaseBody: 'llvm#####_clang######'
+    #     assetsPattern: $(build.stagingDirectory)\\**\\*.zip
+    #     draft: true
