--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,5 +56,4 @@ jobs:
         releaseBody: 'llvm#####_clang######'
         assetsPattern: $(build.stagingDirectory)\\**\\*.zip
         draft: true
-        Verbose: $true
-        # env: { VerbosePreference: Continue}
+        env: { VerbosePreference: Continue}
