--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,4 +56,5 @@ jobs:
         releaseBody: 'llvm#####_clang######'
         assetsPattern: $(build.stagingDirectory)\\**\\*.zip
         draft: true
-        env: { 'VerbosePreference': 'Continue'}
+        env: 
+          VerbosePreference: Continue
