--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,7 +48,7 @@ jobs:
       displayName: 'Publish GitHub Release llvm#####_clang######'
       inputs:
         applicationName: 'llvm_clang_buildDevOps'
-        token: '$(llvmClangGithubToken)'
+        token: $(llvmClangGithubToken)
         repo: 'llvm_clang_build'
         owner: monamimani
         tagName: 'llvm#####_clang######'
