Create a zip file of the release

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,7 +42,11 @@ jobs:
     #   timeoutInMinutes: 240
 
     - script: |
-        copy readme.md $(build.stagingDirectory)
+        set
+
+    - task: ArchiveFiles@2
+      inputs:
+        rootFolderOrFile: readme.md
 
     - task: jakobehn.jakobehn-vsts-github-tasks.publish-github-release.PublishGitHubRelease@0
       displayName: 'Publish GitHub Release llvm#####_clang######'
