--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,15 +51,13 @@ jobs:
         archiveFile: $(Build.stagingDirectory)/$(Build.BuildId).zip
 
     - task: jakobehn.jakobehn-vsts-github-tasks.publish-github-release.PublishGitHubRelease@0
-      displayName: 'Publish GitHub Release llvm#####_clang######_v$(build.buildNumber)'
+      displayName: 'Publish GitHub Release llvm_clang_v$(build.buildNumber)'
       inputs:
         applicationName: 'llvm_clang_buildDevOps'
         token: $(llvmClangGithubToken)
         repo: 'llvm_clang_build'
         owner: monamimani
-        tagName: 'llvm#####_clang######_v$(build.buildNumber)'
-        releaseName: 'llvm#####_clang######_v$(build.buildNumber)'
-        releaseBody: 'llvm#####_clang######_v$(build.buildNumber)'
+        tagName: 'llvm_clang_v$(build.buildNumber)'
+        releaseName: 'lllvm_clang_v$(build.buildNumber)'
+        releaseBody: 'llvm_clang_v$(build.buildNumber)'
         assetsPattern: $(build.stagingDirectory)\\**\\*.zip
-        draft: true
-        prerelease: true
