--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,7 +45,7 @@ jobs:
     - task: ArchiveFiles@2
       inputs:
         rootFolderOrFile: readme.md
-        archiveFile: $(Build.stagingDirectory)/build.zip
+        archiveFile: $(Build.stagingDirectory)\\build.zip
 
     - task: jakobehn.jakobehn-vsts-github-tasks.publish-github-release.PublishGitHubRelease@0
       displayName: 'Publish GitHub Release llvm_clang_v$(build.buildNumber)'
@@ -57,4 +57,4 @@ jobs:
         tagName: 'llvm_clang_v$(build.buildNumber)'
         releaseName: 'lllvm_clang_v$(build.buildNumber)'
         releaseBody: 'llvm_clang_v$(build.buildNumber)'
-        assetsPattern: $(build.stagingDirectory)/build.zip
+        assetsPattern: $(build.stagingDirectory)\\build.zip
