--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,11 +17,19 @@ variables:
   BuidDir: 'build'
 
 jobs:
-- job: string
+- job: GenerateAndBuild
+  timeoutInMinutes: 240
+
   pool:
     vmImage: 'VS2017-Win2016'
 
-  timeoutInMinutes: 240
+  strategy:
+    maxParallel: 2
+    matrix:
+      debugJob:
+        configuration: debug
+      releaseJob:
+        configuration: release
 
   steps:
     # - checkout: self # I think I don't need it because the get source of the ui take over when it is commented out.
@@ -31,7 +39,7 @@ jobs:
         call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" x64
         set cc=cl
         set cxx=cl
-        CMake -GNinja -H.\llvm -B.\$(BuidDir) -DCMAKE_INSTALL_PREFIX=$(Build.stagingDirectory) -DLLVM_EXTERNAL_PROJECTS="clang" -DLLVM_EXTERNAL_CLANG_SOURCE_DIR=.\clang -DCMAKE_BUILD_TYPE=release -DLLVM_TARGETS_TO_BUILD=X86 -DLLVM_ENABLE_WARNINGS=OFF -DLLVM_ENABLE_CXX1Z=ON -DLLVM_INCLUDE_EXAMPLES=OFF -DLLVM_INCLUDE_TESTS=OFF -DLLVM_INCLUDE_DOCS=OFF
+        CMake -GNinja -H.\llvm -B.\$(BuidDir) -DCMAKE_INSTALL_PREFIX=$(Build.stagingDirectory) -DLLVM_EXTERNAL_PROJECTS="clang" -DLLVM_EXTERNAL_CLANG_SOURCE_DIR=.\clang -DCMAKE_BUILD_TYPE=$(configuration) -DLLVM_TARGETS_TO_BUILD=X86 -DLLVM_ENABLE_WARNINGS=OFF -DLLVM_ENABLE_CXX1Z=ON -DLLVM_INCLUDE_EXAMPLES=OFF -DLLVM_INCLUDE_TESTS=OFF -DLLVM_INCLUDE_DOCS=OFF
       displayName: CMake generation
 
     - script: |
@@ -40,7 +48,7 @@ jobs:
       displayName: CMake build-install
       timeoutInMinutes: 240
 
-    - task: ArchiveFiles@2
+    - task: ArchiveFiles
       inputs:
         rootFolderOrFile: $(Build.stagingDirectory)
         archiveFile: $(Build.ArtifactStagingDirectory)\\$(Build.BuildId).zip
